--- a/index.html
+++ b/index.html
@@ -1215,14 +1215,14 @@ window.onload = function() {
   <div class="barber-item">
     <img src="pirjaa.JPG" alt="">
     <h2>Viyrza Azhar</h2>
-    <h3>Harry brings a detailed, meticulous approach to styling.</h3>
+    <h3>Viyrza brings a detailed, meticulous approach to styling.</h3>
     <a class="fa fa-instagram" href="#"></a>
     <a class="fa fa-facebook" href="#"></a>
   </div>
   <div class="barber-item">
     <img src="gapin.jpg" alt="">
     <h2>Gavin Abdul</h2>
-    <h3>Phillips has several years of experience in the barber industry.</h3>
+    <h3>Gavin has several years of experience in the barber industry.</h3>
     <a class="fa fa-instagram" href="#"></a>
     <a class="fa fa-facebook" href="#"></a>
   </div>
