tambahan dari gw

--- a/index.html
+++ b/index.html
@@ -1006,6 +1006,7 @@
 
 <section class="timee">
   <div class="date-container">
+    <button href="booking.html">Book Now</button>
       <div class="date-box" onclick="showSchedule('day12')">
           <h1>Today</h1>
           
@@ -1206,21 +1207,21 @@ window.onload = function() {
   </div>
   <div class="barber-header">
   <div class="barber-item">
-    <img src="iam.jpeg" alt="">
+    <img src="./source/iam.jpeg" alt="">
     <h2>Ichramsyah A</h2>
     <h3>is the founder and owner of our barbershop.</h3>
     <a class="fa fa-instagram" href="#"></a>
     <a class="fa fa-facebook" href="#"></a>
   </div>
   <div class="barber-item">
-    <img src="pirjaa.JPG" alt="">
+    <img src="./source/pirjaa.JPG" alt="">
     <h2>Viyrza Azhar</h2>
     <h3>Viyrza brings a detailed, meticulous approach to styling.</h3>
     <a class="fa fa-instagram" href="#"></a>
     <a class="fa fa-facebook" href="#"></a>
   </div>
   <div class="barber-item">
-    <img src="gapin.jpg" alt="">
+    <img src="./source/gapin.jpg" alt="">
     <h2>Gavin Abdul</h2>
     <h3>Gavin has several years of experience in the barber industry.</h3>
     <a class="fa fa-instagram" href="#"></a>
